# python-project-49

./: Makefile  README.md  pyproject.toml
b_games/games/: all_games.py  calc.py  even.py  prime.py  progression.py
b_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/: cli.py
brain_games/games/: all_games.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
