[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "arithmetic games package"
authors = ["Kirill <kirillmark0603@gmail.com>"]
readme = "README.md"
packages = [
    {include = "b_games"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/kirillmark/python-project-49"

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "b_games.scripts.brain_games:main"
brain-even = "b_games.scripts.brain_even:main"
brain-calc = "b_games.scripts.brain_calc:main"
brain-gcd = "b_games.scripts.brain_gcd:main"
brain-progression = "b_games.scripts.brain_progression:main"
brain-prime = "b_games.scripts.brain_prime:main"
